Step 2. Get the Sample Code

--- a/app-indexing-start/app/src/main/AndroidManifest.xml
+++ b/app-indexing-start/app/src/main/AndroidManifest.xml
@@ -35,5 +35,7 @@
         </provider>
     </application>
 </manifest>
+<!--Step 2. Get the Sample Code-->
+<!--DONE-->
 <!--Step 1. Overview-->
 <!--DONE-->
