Step 3. Import the Sample App

--- a/app-indexing-start/app/src/main/AndroidManifest.xml
+++ b/app-indexing-start/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         </provider>
     </application>
 </manifest>
+<!-- Step 3. Import the Sample App-->
+<!--DONE-->
 <!--Step 2. Get the Sample Code-->
 <!--DONE-->
 <!--Step 1. Overview-->
