--- a/app-indexing-start/app/build.gradle
+++ b/app-indexing-start/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "com.recipe_app"
         minSdkVersion 23
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 2
         versionName "1.0"
     }
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v13:23.3.0'
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.google.firebase:firebase-appindexing:10.0.0'
+    compile 'com.android.support:support-v13:26.0.0-alpha1'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.google.firebase:firebase-appindexing:11.0.4'
     compile group:'com.squareup.picasso', name:'picasso', version:'2.3.2'
-    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
