--- a/app-indexing-start/app/build.gradle
+++ b/app-indexing-start/app/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:support-v13:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
-    compile 'com.google.firebase:firebase-appindexing:11.0.4'
+    compile 'com.google.firebase:firebase-appindexing:11.0.4' // OK
     compile group:'com.squareup.picasso', name:'picasso', version:'2.3.2'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 }
