--- a/app-indexing-start/app/src/main/AndroidManifest.xml
+++ b/app-indexing-start/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         </provider>
     </application>
 </manifest>
+<!-- Step 5. Add the App Indexing API-->
+<!--DONE-->
 <!-- Step 4. Create a New Project in Firebase Console-->
 <!--DONE-->
 <!-- Step 3. Import the Sample App-->
