--- a/app-indexing-start/app/src/main/AndroidManifest.xml
+++ b/app-indexing-start/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
         </service>
     </application>
 </manifest>
+<!--Step 10. Remove Items From the On-device Index -->
+<!--DONE-->
 <!--Step 9. Update the On-device Index -->
 <!--DONE-->
 <!--Step 8. Write Personal Content to On-device Index -->
